--- a/HR-Management-System/HR-Management-System/HR-Management-System.csproj
+++ b/HR-Management-System/HR-Management-System/HR-Management-System.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Interfaces\" />
+    <Folder Include="Models\DTOs\" />
+    <Folder Include="Models\Services\" />
+  </ItemGroup>
+
 </Project>
