--- a/HR-Management-System/HR-Management-System/HR-Management-System.csproj
+++ b/HR-Management-System/HR-Management-System/HR-Management-System.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
